Cleaning up a few things.

--- a/SquarePeg.Core/SquarePeg.Core.csproj
+++ b/SquarePeg.Core/SquarePeg.Core.csproj
@@ -60,11 +60,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\BoardsRepository.cs" />
-    <Compile Include="Data\IBoardsRepository.cs" />
+    <Compile Include="Repository\BoardsRepository.cs" />
+    <Compile Include="Repository\IBoardsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
