--- a/SquarePeg.ServiceHost/Web.config
+++ b/SquarePeg.ServiceHost/Web.config
@@ -4,6 +4,20 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:mm\:ss}|${level}|${stacktrace}|${message}" />
+      <target name="file" xsi:type="File" fileName="App.log" layout="${date}: ${message}" />
+      <target name="eventlog" xsi:type="EventLog" source="My App" log="Application" layout="${date}: ${message} ${stacktrace}" />
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Info" writeTo="file" />
+      <logger name="*" minlevel="Fatal" writeTo="eventlog" />
+    </rules>
+  </nlog>
   <connectionStrings>
     <add name="SquarePeg" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=SquarePeg;Uid=root;Pwd=r0b3r7;Pooling=true; Max Pool Size=100;Connection Timeout=5" />
   </connectionStrings>
@@ -25,6 +39,10 @@
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.6.5.0" newVersion="6.6.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.1.0" newVersion="2.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
