--- a/SquarePeg.ServiceHost/packages.config
+++ b/SquarePeg.ServiceHost/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.6.5" targetFramework="net45" />
+  <package id="NLog" version="2.0.1.2" targetFramework="net45" />
+  <package id="PostSharp" version="3.0.26" targetFramework="net45" />
   <package id="ServiceStack" version="3.9.46" targetFramework="net45" />
   <package id="ServiceStack.Common" version="3.9.46" targetFramework="net45" />
+  <package id="ServiceStack.Logging.NLog" version="1.0.8.0" targetFramework="net45" />
   <package id="ServiceStack.OrmLite.MySql" version="3.9.45" targetFramework="net45" />
   <package id="ServiceStack.OrmLite.SqlServer" version="3.9.45" targetFramework="net45" />
   <package id="ServiceStack.Redis" version="3.9.45" targetFramework="net45" />
