--- a/SquarePeg.Service/SquarePeg.Service.csproj
+++ b/SquarePeg.Service/SquarePeg.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A542E36-6B4F-45F2-B571-E6A81D30AA6D}</ProjectGuid>
+    <ProjectGuid>{936A74A5-A936-494A-96ED-5AAD566C5896}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SquarePeg.Common</RootNamespace>
-    <AssemblyName>SquarePeg.Common</AssemblyName>
+    <RootNamespace>SquarePeg.Service</RootNamespace>
+    <AssemblyName>SquarePeg.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -33,31 +33,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.2.0.1.2\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="PostSharp">
       <HintPath>..\packages\PostSharp.3.0.26\lib\net20\PostSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack">
-      <HintPath>..\packages\ServiceStack.3.9.46\lib\net35\ServiceStack.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.Common">
       <HintPath>..\packages\ServiceStack.Common.3.9.46\lib\net35\ServiceStack.Common.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.Interfaces">
+    <Reference Include="ServiceStack.Interfaces, Version=3.9.46.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ServiceStack.Common.3.9.46\lib\net35\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.OrmLite">
-      <HintPath>..\packages\ServiceStack.OrmLite.SqlServer.3.9.45\lib\ServiceStack.OrmLite.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.OrmLite.SqlServer">
-      <HintPath>..\packages\ServiceStack.OrmLite.SqlServer.3.9.45\lib\ServiceStack.OrmLite.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="ServiceStack.Redis">
-      <HintPath>..\packages\ServiceStack.Redis.3.9.45\lib\net35\ServiceStack.Redis.dll</HintPath>
+    <Reference Include="ServiceStack.Logging.NLog">
+      <HintPath>..\packages\ServiceStack.Logging.NLog.1.0.8.0\lib\net35\ServiceStack.Logging.NLog.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.ServiceInterface">
       <HintPath>..\packages\ServiceStack.3.9.46\lib\net35\ServiceStack.ServiceInterface.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.Text">
+    <Reference Include="ServiceStack.Text, Version=3.9.45.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ServiceStack.Text.3.9.46\lib\net35\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -69,16 +65,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Aspects\LoggingAspect.cs" />
-    <Compile Include="Caching\Keys.cs" />
-    <Compile Include="DependencyInjection\Container.cs" />
+    <Compile Include="BoardsService.cs" />
+    <Compile Include="IBoardsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\Encryption.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SquarePeg.Common\SquarePeg.Common.csproj">
+      <Project>{9a542e36-6b4f-45f2-b571-e6a81d30aa6d}</Project>
+      <Name>SquarePeg.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SquarePeg.Model\SquarePeg.Model.csproj">
+      <Project>{de487706-cff2-4943-b952-9526aec49c45}</Project>
+      <Name>SquarePeg.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SquarePeg.Repository\SquarePeg.Repository.csproj">
+      <Project>{08570ef9-0ed5-4490-9da0-7bca1a40083e}</Project>
+      <Name>SquarePeg.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SquarePeg.ServiceModel\SquarePeg.ServiceModel.csproj">
+      <Project>{7ac325ed-0d17-4f7f-86b6-8cc2f04afa1e}</Project>
+      <Name>SquarePeg.ServiceModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <Import Project="..\packages\PostSharp.3.0.26\tools\PostSharp.targets" Condition="Exists('..\packages\PostSharp.3.0.26\tools\PostSharp.targets')" />
