--- a/SquarePeg.ServiceHost/SquarePeg.ServiceHost.csproj
+++ b/SquarePeg.ServiceHost/SquarePeg.ServiceHost.csproj
@@ -41,9 +41,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core">
-      <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -112,9 +109,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="LoggingInterceptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequiresPostSharp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -130,13 +125,13 @@
       <Project>{9a542e36-6b4f-45f2-b571-e6a81d30aa6d}</Project>
       <Name>SquarePeg.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SquarePeg.Core\SquarePeg.Core.csproj">
-      <Project>{a2db7758-e230-44c8-b65d-8cb777213fe3}</Project>
-      <Name>SquarePeg.Core</Name>
+    <ProjectReference Include="..\SquarePeg.Repository\SquarePeg.Repository.csproj">
+      <Project>{08570EF9-0ED5-4490-9DA0-7BCA1A40083E}</Project>
+      <Name>SquarePeg.Repository</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SquarePeg.ServiceInterface\SquarePeg.ServiceInterface.csproj">
+    <ProjectReference Include="..\SquarePeg.Service\SquarePeg.Service.csproj">
       <Project>{936a74a5-a936-494a-96ed-5aad566c5896}</Project>
-      <Name>SquarePeg.ServiceInterface</Name>
+      <Name>SquarePeg.Service</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
