--- a/SquarePeg.WebHost/packages.config
+++ b/SquarePeg.WebHost/packages.config
@@ -20,5 +20,13 @@
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="PostSharp" version="3.0.26" targetFramework="net45" />
+  <package id="ServiceStack" version="3.9.46" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="3.9.46" targetFramework="net45" />
+  <package id="ServiceStack.Host.Mvc" version="3.9.45" targetFramework="net45" />
+  <package id="ServiceStack.Mvc" version="3.9.45" targetFramework="net45" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.45" targetFramework="net45" />
+  <package id="ServiceStack.Redis" version="3.9.45" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="3.9.46" targetFramework="net45" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
