--- a/SquarePeg.WebHost/SquarePeg.WebHost.csproj
+++ b/SquarePeg.WebHost/SquarePeg.WebHost.csproj
@@ -179,6 +179,7 @@
     <Content Include="Content\Site.css" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="README.txt" />
+    <Content Include="Scripts\google-analytics.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
