--- a/SquarePeg.Service.Tests.Unit/packages.config
+++ b/SquarePeg.Service.Tests.Unit/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.1.0" targetFramework="net45" />
+  <package id="AutoFixture.AutoMoq" version="3.1.0" targetFramework="net45" />
+  <package id="AutoFixture.Xunit" version="3.1.0" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
-  <package id="PostSharp" version="3.0.26" targetFramework="net45" />
   <package id="ServiceStack" version="3.9.46" targetFramework="net45" />
   <package id="ServiceStack.Common" version="3.9.46" targetFramework="net45" />
   <package id="ServiceStack.OrmLite.SqlServer" version="3.9.45" targetFramework="net45" />
