--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DE487706-CFF2-4943-B952-9526AEC49C45}</ProjectGuid>
+    <ProjectGuid>{2217785B-CEE1-4163-92DD-4646D1938D74}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SquarePeg.Model</RootNamespace>
-    <AssemblyName>SquarePeg.Model</AssemblyName>
+    <RootNamespace>Test</RootNamespace>
+    <AssemblyName>Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -36,9 +36,6 @@
     <Reference Include="PostSharp">
       <HintPath>..\packages\PostSharp.3.0.26\lib\net20\PostSharp.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.Interfaces">
-      <HintPath>..\SquarePeg.Common\bin\Debug\ServiceStack.Interfaces.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,9 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequiresPostSharp.cs" />
-    <Compile Include="Types\Board.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
