--- a/SquarePeg.WebHost/Web.config
+++ b/SquarePeg.WebHost/Web.config
@@ -30,6 +30,8 @@
   </appSettings>
   <!-- Required for MONO -->
   <system.web>
+    <customErrors mode="Off">
+    </customErrors>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
