Some small changes.

--- a/SquarePeg.Model/SquarePeg.Model.csproj
+++ b/SquarePeg.Model/SquarePeg.Model.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Types\Board.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
