--- a/SquarePeg.WebHost/Web.Release.config
+++ b/SquarePeg.WebHost/Web.Release.config
@@ -4,7 +4,7 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
-    <add name="SquarePeg" providerName="MySql.Data.MySqlClient" connectionString="Server=squarepegdev.cfe95aaaihel.us-east-1.rds.amazonaws.com;Database=squarepeg;Uid=square;Pwd=5q4r3p3g;Pooling=true;Connection Timeout=5" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)" />
+    <add name="SquarePeg" providerName="MySql.Data.MySqlClient" connectionString="Server=XXX;Database=squarepeg;Uid=YYY;Pwd=ZZZ;Pooling=true;Connection Timeout=5" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)" />
   </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
